# slack-mig-teams

./: Pipfile  README.md  channel_map.csv  mapping.json  setup.cfg
.github/: copilot-instructions.md
scripts/: README.md  check_messages.py  create_channel_migration.py  create_group_with_owner.py  create_team_migration.py  csv_to_mapping.py  debug_import_one.py  decode_token.py  delete_group.py  find_team_ids.py  find_team_ids_plus.py  fix_bom.py  get_team_state.py  graph_probe.py  inspect_channel.py  list_channels.py  poll_team_creation.py  poll_team_op.py  recent_teams_fixed.py
scripts/archive/: create_team_test.py  create_team_with_owner.py  recent_teams.py  teamify_migration.py  token_test.py
src/slack2teams/: cli.py
src/slack2teams/extract/: slack_reader.py
src/slack2teams/load/: graph_loader.bak.py  graph_loader.py  graph_loader.py.bak2  graph_loader.py.bak3  graph_loader.py.bak4  graph_loader.py.bak5  graph_loader.py.bak_20251028_144105  graph_loader.py.bak_future
src/slack2teams/transform/: slack_to_html.py
