[metadata]
name = slack2teams
version = 0.1.0
description = Slack ? Teams ETL
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    slack2teams = slack2teams.cli:app
